# portlight

./: .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  llm-sync-drive.yaml  llms.txt  pyproject.toml  verify.sh
.github/workflows/: ci.yml  pages.yml  publish.yml  release-binaries.yml
artifacts/balance/: balance-report.json  balance-report.md
artifacts/stress/: stress-report.json  stress-report.md
docs/: ALPHA_STATUS.md  CAREER_PATHS.md  COMMANDS.md  EXAMPLE_RUNS.md  FIRST_VOYAGE.md  KNOWN_ISSUES.md  PRINT_AND_PLAY_RULES.md  RELEASE_NOTES_ALPHA.md  START_HERE.md  TABLETOP_DESIGN.md  WHY_PORTLIGHT.md  WORLD_HANDBOOK.md
site/: astro.config.mjs  package-lock.json  package.json
site/src/: site-config.ts
site/src/styles/: starlight-custom.css
src/portlight/: __init__.py
src/portlight/app/: cli.py  combat_views.py  formatting.py  session.py  views.py
src/portlight/balance/: policies.py  runner.py
src/portlight/content/: campaign.py  companions.py  contracts.py  crew_roles.py  cross_port_networks.py  factions.py  fighting_styles.py  goods.py  infrastructure.py  injuries.py  port_institutions.py  port_institutions_east.py  port_politics.py  ports.py  routes.py  sea_culture.py  seasons.py  ships.py  world.py
src/portlight/engine/: bounty.py  campaign.py  captain_identity.py  captain_memory.py  combat.py  companion_engine.py  consequences.py  (+23 more)
tests/: test_armor.py  test_breach.py  test_brokers_licenses.py  test_bugfixes.py  test_campaign.py  test_captain_identity.py  test_captain_memory.py  test_consequences.py  test_contracts.py  test_convoy.py  test_credit.py  test_crew_roles.py  test_cross_port_networks.py  test_custom_captain.py  test_depth.py  test_economy.py  test_encounter_flow.py  test_fighting_styles.py  test_fleet.py  test_hunting.py  test_infrastructure.py  test_injuries.py  test_insurance.py  test_loot.py  test_melee_weapons.py  test_naval_combat.py  test_personal_combat.py  test_pirate_ecosystem.py  test_port_institutions.py  test_reputation.py  test_save.py  test_sea_culture.py  test_sea_culture_engine.py  test_session.py  test_sparing_flow.py  test_tui_encounter.py  test_tui_integration.py  test_tui_smoke.py  test_tui_voyage.py  test_upgrades.py  (+6 more)
tests/balance/: test_captain_parity.py  test_finance_infra.py  test_victory_paths.py
tests/stress/: test_invariants.py
tools/: run_balance.py  run_stress.py
world-map/: portlight-world.json
(+18 files in other folders)
