[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portlight"
version = "2.0.1"
description = "Trade-first maritime strategy CLI — route arbitrage, contracts, infrastructure, finance, and commercial reputation across a living regional economy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }]
keywords = ["game", "trading", "maritime", "strategy", "xrpl"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
tui = ["textual>=0.85.0"]
xrpl = ["xrpl-py>=2.0"]
printandplay = ["fpdf2>=2.8"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "fpdf2>=2.8"]

[project.scripts]
portlight = "portlight.app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/portlight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
